feat[3](util):[1.0.0]添加工具类。。。。。。。。。。。。。。。。。。。